...
    final addrType = bytes[offset];
    offset += 1;
    final version = readVarint();
    if (version == null || offset + 32 > bytes.length) return null;
    final digest = bytes.sublist(offset, offset + 32);
    offset += 32;
    final prefix = addrType == 0 ? 'AU' : 'AS';
    try {
      return prefix +
          base58CheckEncode([...varintEncodeInt(version.toInt()), ...digest]);
    } catch (_) {
      return null;
    }
...
